# esp32-rust-wifi-test

./: Cargo.toml  README.md  cfg.toml.example  partitions.csv  sdkconfig.defaults
src/: main.rs
