[package]
name = "esp32-wifi-test"
version = "0.1.0"
authors = ["procrastimax <mmeheykeroth@protonmail.com>"]
edition = "2021"
resolver = "2"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
native = ["esp-idf-sys/native"]

[dependencies]
esp-idf-sys = { version = "0.31.11", features = ["binstart"] }


[build-dependencies]
embuild = "0.30.4"
