[package]
name = "esp32-wifi-test"
version = "0.1.0"
authors = ["procrastimax <mmeheykeroth@protonmail.com>"]
edition = "2021"
resolver = "2"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
native = ["esp-idf-sys/native"]

[dependencies]
esp-idf-sys = { version = "0.32.0", features = ["binstart"] }
esp-idf-svc = { version = "0.45.0", features = ["experimental"] }
esp-idf-hal = { version = "0.40.1" }
embedded-svc = { version = "0.24.0" }
embedded-hal = { version = "0.2.7" }
toml-cfg = "0.1.3"


[build-dependencies]
embuild = "0.30.4"
